# leptos-components

./: .gitignore  Cargo.toml  Justfile  README.md  context7.json
.github/workflows/: ci.yml
docs/: editor_component_design.md  longcipher_leptos_components_design.md
examples/: basic_editor.rs
src/: lib.rs
src/components/: mod.rs
src/components/editor/: core.rs  cursor.rs  find_replace.rs  folding.rs  history.rs  line_numbers.rs  minimap.rs  mod.rs  selection.rs  state.rs  statistics.rs  syntax.rs
src/helpers/: dom.rs  mod.rs  text.rs
