[package]
name = "longcipher-leptos-components"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Production-ready UI components for Leptos applications"
repository = "https://github.com/longcipher/longcipher-leptos-components"
keywords = ["leptos", "ui", "components", "wasm", "web"]
categories = ["gui", "wasm", "web-programming"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["editor"]

# Core components (always available)
core = []

# Editor component with full text editing capabilities
editor = ["dep:web-sys", "dep:wasm-bindgen", "dep:js-sys"]

# Syntax highlighting support for editor
syntax-highlighting = ["editor", "dep:syntect", "dep:regex"]

# Markdown rendering and preview
markdown = ["editor", "dep:comrak"]

# Find and replace functionality
find-replace = ["editor", "dep:regex"]

# Code folding support
folding = ["editor"]

# Document statistics (word count, etc.)
statistics = ["editor"]

# Line numbers display
line-numbers = ["editor"]

# Minimap navigation
minimap = ["editor"]

# Full editor bundle with all features
editor-full = [
    "editor",
    "syntax-highlighting",
    "markdown",
    "find-replace",
    "folding",
    "statistics",
    "line-numbers",
    "minimap",
]

# SSR support for server-side rendering
ssr = ["leptos/ssr"]

# Hydration support
hydrate = ["leptos/hydrate"]

# CSR-only mode
csr = ["leptos/csr"]

[dependencies]
# Core Leptos dependencies
leptos = "0.8.15"

# Web platform bindings
web-sys = { version = "0.3.85", optional = true, features = [
    "Document",
    "Element",
    "HtmlElement",
    "HtmlTextAreaElement",
    "HtmlInputElement",
    "Window",
    "KeyboardEvent",
    "MouseEvent",
    "Selection",
    "Range",
    "DomRect",
    "ClipboardEvent",
    "DataTransfer",
    "InputEvent",
    "FocusEvent",
    "WheelEvent",
    "CssStyleDeclaration",
] }
wasm-bindgen = { version = "0.2.108", optional = true }
js-sys = { version = "0.3.85", optional = true }

# Optional dependencies for features
syntect = { version = "5.3.0", optional = true, default-features = false, features = [
    "default-syntaxes",
    "default-themes",
    "html",
    "regex-fancy",
] }
comrak = { version = "0.49.0", optional = true, default-features = false }
regex = { version = "1.12.2", optional = true }

# Utilities
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.58"
leptos = { version = "0.8.15", features = ["csr"] }
console_error_panic_hook = "0.1.7"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Profile settings for release builds
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = "z"

# Development profile with optimized dependencies
[profile.dev.package."*"]
opt-level = 2

[package.metadata.cargo-machete]
ignored = ["comrak", "js-sys", "thiserror", "wasm-bindgen"]
